crates/toml/tests/snapshots/invalid/inline-table/empty-01.stderr
TOML parse error at line 1, column 6
  |
1 | t = {,}
  |      ^
extra comma in inline table, expected key
